--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.7.2",
     "cra-template-pwa": "2.0.0",
     "d3": "^7.9.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^5.0.2"
+    "web-vitals": "^2.1.4",
+    "echarts": "^5.4.0",
+    "echarts-for-react": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
